--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Main</title>
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/buttons.css">
     <link rel="stylesheet" href="css/article.css">
@@ -10,8 +10,7 @@
     <link rel="stylesheet" href="css/site_sections.css">
     <link rel="stylesheet" href="css/footer.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Joti+One:300,400,600,700&amp;lang=en"/>
-    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Titan+One:300,400,600,700&amp;lang=en"/>
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Titan+One:400&amp;lang=en"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
@@ -29,12 +28,12 @@
             </div>
             <nav class="header-menu">
                 <ul class="header-menu__list">
-                    <li><a href="" class="header-menu__link">Explore</a></li>
+                    <li><a href="explore.html" class="header-menu__link">Explore</a></li>
                     <li><a href="gallery.html" class="header-menu__link">Gallery</a></li>
                     <li><a href="" class="header-menu__link">My posts</a></li>
                     <li><a href="" class="header-menu__link">Following</a></li>
                     <li><a href="" class="header-menu__link">About</a></li>
-                    <li><a href="" class="header-menu__link header-menu__link__account">Account</a></li>
+                    <li><a href="login_page.html" class="header-menu__link header-menu__link__account">Account</a></li>
                 </ul>
             </nav>
         </div>
@@ -46,115 +45,118 @@
     </div>
 </header>
 
+<main>
+    <section class="site-sections">
+        <h2 class="site-sections__header">Site sections</h2>
 
-<section class="site-sections">
-    <h2 class="site-sections__header">Site sections</h2>
+        <div class="ss-container">
+            <div class="ss-container__box">
+                <span></span>
+                <div class="ss-container__box__content">
+                    <h2>Explore</h2>
+                    <p>Explore our Blockchain section for the latest news and updates in the world of blockchain technology.
+                        Stay informed about the most recent developments, trends, and innovations in this rapidly evolving
+                        space.</p>
+                    <a href="#">Read More</a>
+                </div>
+            </div>
+            <div class="ss-container__box">
+                <span></span>
+                <div class="ss-container__box__content">
+                    <h2>Gallery</h2>
+                    <p>Visit our Gallery section to explore a captivating collection of visual content. Dive into a world of
+                        stunning images and videos that showcase the beauty, diversity, and creativity in various domains.
+                        Immerse yourself in the visual stories that this section has to offer.</p>
+                    <a href="#">Read More</a>
+                </div>
+            </div>
+            <div class="ss-container__box">
+                <span></span>
+                <div class="ss-container__box__content">
+                    <h2>My posts</h2>
+                    <p>Discover 'My Posts,' your personalized corner for sharing updates and insights. This section allows
+                        you to connect with others, post your thoughts, and keep track of your contributions within the
+                        community.</p>
+                    <a href="#">Read More</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <h2 class="site-sections__header">Why it is worth using blockchain technology?</h2>
 
-    <div class="ss-container">
-        <div class="ss-container__box">
-            <span></span>
-            <div class="ss-container__box__content">
-                <h2>Explore</h2>
-                <p>Explore our Blockchain section for the latest news and updates in the world of blockchain technology.
-                    Stay informed about the most recent developments, trends, and innovations in this rapidly evolving
-                    space.</p>
-                <a href="#">Read More</a>
+    <section class="questions-section">
+        <div class="questions">
+            <div class="questions-section__card">
+                <div class="circle">
+                    <h2>01</h2>
+                </div>
+                <div class="content">
+                    <p>Security: Blockchain's cryptographic design ensures data protection and minimizes
+                        vulnerabilities.</p>
+                </div>
             </div>
-        </div>
-        <div class="ss-container__box">
-            <span></span>
-            <div class="ss-container__box__content">
-                <h2>Gallery</h2>
-                <p>Visit our Gallery section to explore a captivating collection of visual content. Dive into a world of
-                    stunning images and videos that showcase the beauty, diversity, and creativity in various domains.
-                    Immerse yourself in the visual stories that this section has to offer.</p>
-                <a href="#">Read More</a>
+            <div class="questions-section__card">
+                <div class="circle">
+                    <h2>02</h2>
+                </div>
+                <div class="content">
+                    <p>Transparency: Its transparent, immutable ledger fosters trust in records and transactions.</p>
+                </div>
             </div>
-        </div>
-        <div class="ss-container__box">
-            <span></span>
-            <div class="ss-container__box__content">
-                <h2>My posts</h2>
-                <p>Discover 'My Posts,' your personalized corner for sharing updates and insights. This section allows
-                    you to connect with others, post your thoughts, and keep track of your contributions within the
-                    community.</p>
-                <a href="#">Read More</a>
+            <div class="questions-section__card">
+                <div class="circle">
+                    <h2>03</h2>
+                </div>
+                <div class="content">
+                    <p>Efficiency: By removing intermediaries, blockchain reduces costs and streamlines processes.</p>
+                </div>
             </div>
-        </div>
-    </div>
-</section>
-<h2 class="site-sections__header">Why it is worth using blockchain technology?</h2>
 
-<section class="questions-section">
-    <div class="questions">
-        <div class="questions-section__card">
-            <div class="circle">
-                <h2>01</h2>
-            </div>
-            <div class="content">
-                <p>Security: Blockchain's cryptographic design ensures data protection and minimizes
-                    vulnerabilities.</p>
-            </div>
         </div>
-        <div class="questions-section__card">
-            <div class="circle">
-                <h2>02</h2>
-            </div>
-            <div class="content">
-                <p>Transparency: Its transparent, immutable ledger fosters trust in records and transactions.</p>
-            </div>
-        </div>
-        <div class="questions-section__card">
-            <div class="circle">
-                <h2>03</h2>
-            </div>
-            <div class="content">
-                <p>Efficiency: By removing intermediaries, blockchain reduces costs and streamlines processes.</p>
-            </div>
-        </div>
+    </section>
 
-    </div>
-</section>
+    <h2 class="site-sections__header">Why it is worth using blockchain technology?</h2>
 
-<h2 class="site-sections__header">Why it is worth using blockchain technology?</h2>
+    <section class="snake-section">
+        <div class="snake">
+            <div class="snake-section__card">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <div class="content">
+                    <h2>01</h2>
+                    <h1>Security</h1>
+                    <p>Security: Blockchain's cryptographic design ensures data protection and minimizes
+                        vulnerabilities.</p>
+                </div>
+            </div>
+            <div class="snake-section__card">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <div class="content">
+                    <h2>02</h2>
+                    <h1>Transparency</h1>
+                    <p>Transparency: Its transparent, immutable ledger fosters trust in records and transactions.</p>
+                </div>
+            </div>
+            <div class="snake-section__card">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <div class="content">
+                    <h2>03</h2>
+                    <h1>Efficiency</h1>
+                    <p>Efficiency: By removing intermediaries, blockchain reduces costs and streamlines processes.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+</main>
 
-<section class="snake-section">
-    <div class="snake">
-        <div class="snake-section__card">
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
-            <div class="content">
-                <h2>01</h2>
-                <h1>Security</h1>
-                <p>Security: Blockchain's cryptographic design ensures data protection and minimizes
-                    vulnerabilities.</p>
-            </div>
-        </div>
-        <div class="snake-section__card">
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
-            <div class="content">
-                <h2>02</h2>
-                <h1>Transparency</h1>
-                <p>Transparency: Its transparent, immutable ledger fosters trust in records and transactions.</p>
-            </div>
-        </div>
-        <div class="snake-section__card">
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
-            <div class="content">
-                <h2>03</h2>
-                <h1>Efficiency</h1>
-                <p>Efficiency: By removing intermediaries, blockchain reduces costs and streamlines processes.</p>
-            </div>
-        </div>
-</section>
 
 
 <footer>
@@ -191,96 +193,10 @@
         </div>
 
         <div class="row">
-            BlockChain Info @ardyc
+            BlockBlog Info @ardyc
         </div>
     </div>
 </footer>
-
-
-<!--<div class="c-posts__header">-->
-<!--    <h2>Последние новости</h2>-->
-<!--</div>-->
-
-<!--<section class="c-posts">-->
-
-<!--    <article class="c-posts__item">-->
-<!--        <h2>Article Title Here</h2>-->
-<!--        <p>Hydrogen stratosphere control tower capacitor Saturn Lalande 21185. Control tower x-rays Luhman 16 Banard's-->
-<!--            Star engine lunar. Horizon engine capture Pluto Brahe sun continuum ion-drive control tower Proxima Centauri-->
-<!--            space-time booster. Core horizon subspace Voyager coordinates water. Contractors Banard's Star nozzle time-->
-<!--            Orion weightless Gemini extra-vehicular explore.</p>-->
-<!--        <p><a href="#" class="c-btn">Read More</a></p>-->
-<!--    </article>-->
-<!--    <article class="c-posts__item">-->
-<!--        <h2>Article Title Here</h2>-->
-<!--        <p>Mars NASA subspace crew warp Herschel stratosphere. Saturn sky zero-g stratosphere fuel cell Venus grounded-->
-<!--            crew yaw Ptolemy Challenger. Pioneer stratosphere Cassini Lalande 21185 Earth telemetry. Galileo uranium-->
-<!--            jumpsuit warp Hawking.</p>-->
-<!--        <p><a href="#" class="c-btn">Read More</a></p>-->
-<!--    </article>-->
-<!--    <article class="c-posts__item">-->
-<!--        <h2>Article Title Here</h2>-->
-<!--        <p>Challenger Voyager Sirius capsule Pioneer Kepler hyperspace launch. Singularity extra-vehicular-->
-<!--            circumnavigate burst. Procyon fuel cell asteroid subspace uranium Proxima Centauri prototype capsule.</p>-->
-<!--        <p><a href="#" class="c-btn">Read More</a></p>-->
-<!--    </article>-->
-<!--    <article class="c-posts__item">-->
-<!--        <h2>Article Title Here</h2>-->
-<!--        <p>Capsule crew Discovery ice spacecraft Pioneer gravity Picard. Lithium contractors meteor water core saucer-->
-<!--            white hole stars planet Picard Jupiter Skunkworks. Prototype clusters Voyager cosmos zero-g Pluto Skunkworks-->
-<!--            hatch. Circumnavigate core hyperspace motion comet Ptolemy.</p>-->
-<!--        <p><a href="#" class="c-btn">Read More</a></p>-->
-<!--    </article>-->
-<!--    <article class="c-posts__item">-->
-<!--        <h2>Article Title Here</h2>-->
-<!--        <p>Orbit warp atomic Buzz Lightyear. Uranium circumnavigate Halley Neptune nebula launch north Proxima Centauri-->
-<!--            engine.</p>-->
-<!--        <p><a href="#" class="c-btn">Read More</a></p>-->
-<!--    </article>-->
-<!--    <article class="c-posts__item">-->
-<!--        <h2>Article Title Here</h2>-->
-<!--        <p>Troposphere capacitor Newton Kepler. Jupiter ionosphere saucer Gemini Neptune core Alpha Centauri Venus comet-->
-<!--            Proxima Centauri Herschel. Banard's Star inertia laser contractors ion-drive fuel cell NASA. Panel-->
-<!--            solar-flare dwarf probe Sagan Sirius jetpack time laser. Columbia nebula horizon mesoshphere pulsar mission-->
-<!--            nuclear Sirius jetpack UFO.</p>-->
-<!--        <p><a href="#" class="c-btn">Read More</a></p>-->
-<!--    </article>-->
-<!--    <article class="c-posts__item">-->
-<!--        <h2>Article Title Here</h2>-->
-<!--        <p>X-rays Orion capsule re-entry Mercury tank capture Mars control tower. Fusion Challenger physics flight-->
-<!--            Saturn . Warp countdown flare telemetry yaw rocket stars. Planet astronomy Venus reusable continuum inertia-->
-<!--            robotic re-entry booster Pioneer.</p>-->
-<!--        <p><a href="#" class="c-btn">Read More</a></p>-->
-<!--    </article>-->
-<!--    <article class="c-posts__item">-->
-<!--        <h2>Article Title Here</h2>-->
-<!--        <p>Solar crew hydrogen booster panel Europa array Saturn fusion Jupiter control tower singularity. Telemetry-->
-<!--            laser Venus wave capacitor gamma ray orbit lunar Uranus. Venus supernova Hawking ignite Mars Kirk Pluto.</p>-->
-<!--        <p><a href="#" class="c-btn">Read More</a></p>-->
-<!--    </article>-->
-<!--    <article class="c-posts__item">-->
-<!--        <h2>Article Title Here</h2>-->
-<!--        <p>Dormant container star system subspace solar binary inverter hyperspace warp. Yaw LiDAR hydrogen container-->
-<!--            galaxy heliosphere Houston Skunkworks gravity weightless pulsar pitch. Stars volatile ice kryptonite-->
-<!--            extra-vehicular Cassini crew meteor Earth positron. Aurora singularity coordinates nozzle Skunkworks valve-->
-<!--            orbit Herschel.</p>-->
-<!--        <p><a href="#" class="c-btn">Read More</a></p>-->
-<!--    </article>-->
-<!--    <article class="c-posts__item">-->
-<!--        <h2>Article Title Here</h2>-->
-<!--        <p>Hubble nebula Europa Gemini Skunkworks subspace uranium extra-vehicular Galileo release planet Banard's Star.-->
-<!--            Pulsar stars Tyson prototype lunar explore Pioneer ion-drive mesoshphere.</p>-->
-<!--        <p><a href="#" class="c-btn">Read More</a></p>-->
-<!--    </article>-->
-<!--    <article class="c-posts__item">-->
-<!--        <h2>Article Title Here</h2>-->
-<!--        <p>Hydrogen stratosphere control tower capacitor Saturn Lalande 21185. Control tower x-rays Luhman 16 Banard's-->
-<!--            Star engine lunar. Horizon engine capture Pluto Brahe sun continuum ion-drive control tower Proxima Centauri-->
-<!--            space-time booster. Core horizon subspace Voyager coordinates water. Contractors Banard's Star nozzle time-->
-<!--            Orion weightless Gemini extra-vehicular explore.</p>-->
-<!--        <p><a href="#" class="c-btn">Read More</a></p>-->
-<!--    </article>-->
-<!--</section>-->
 
 <script src="https://code.jquery.com/jquery-3.6.3.min.js" crossorigin="anonymous"></script>
 <script src="js/menu.js"></script>
