--- a/explore.html
+++ b/explore.html
@@ -18,7 +18,7 @@
         <div class="header__body">
 
             <div class="header__logo">
-                <img src="public/img/icon.svg" alt="">
+                <img src="img/icon.svg" alt="">
             </div>
             <p class="header__title">BlockBlog</p>
 
@@ -48,7 +48,7 @@
     </article>
     <section class="last-news__section">
         <div class="last-news">
-            <img src="public/img/assets/im3.jpg">
+            <img src="img/assets/im3.jpg">
             <div class="content">
                 <div class="creator">
                     <p class="name">Netflix</p>
