--- a/history.html
+++ b/history.html
@@ -18,7 +18,7 @@
         <div class="header__body">
 
             <div class="header__logo">
-                <img src="public/img/icon.svg" alt="">
+                <img src="img/icon.svg" alt="">
             </div>
             <p class="header__title">BlockBlog</p>
 
@@ -50,7 +50,7 @@
                     <div class="timeline-blank"></div>
                     <div class="timeline-text d-flex-2">
                         <div class="single-timeline__content">
-                            <img src="public/img/history/bitcoin2008.jpg" width="200px">
+                            <img src="img/history/bitcoin2008.jpg" width="200px">
                             <p>
                                 <span>2008 год</span> - Публикация белой книги Bitcoin:
                                 В ноябре 2008 года под псевдонимом Сатоси Накамото была опубликована белая книга
@@ -69,7 +69,7 @@
                     <div class="timeline-blank"></div>
                     <div class="timeline-text d-flex-2">
                         <div class="single-timeline__content">
-                            <img src="public/img/history/2009.jpg" width="200px">
+                            <img src="img/history/2009.jpg" width="200px">
                             <p>
                                 <span>2009 год</span> - Запуск сети Bitcoin:
                                 В январе 2009 года Сатоси Накамото добился запуска сети Bitcoin, первой криптовалюты,
@@ -85,7 +85,7 @@
                     <div class="timeline-blank"></div>
                     <div class="timeline-text d-flex-2">
                         <div class="single-timeline__content">
-                            <img src="public/img/history/2010.png" width="200px">
+                            <img src="img/history/2010.png" width="200px">
                             <p>
                                 <span>2010 год</span> - Первая криптовалютная транзакция:
                                 В мае 2010 года программист Ласло Ханец купил две пиццы, выплатив 10,000 биткоинов - это
@@ -102,7 +102,7 @@
                     <div class="timeline-blank"></div>
                     <div class="timeline-text d-flex-2">
                         <div class="single-timeline__content">
-                            <img src="public/img/history/2013.jpg" width="200px">
+                            <img src="img/history/2013.jpg" width="200px">
                             <p>
                                 <span>2013 год</span> - Появление альтернативных криптовалют:
                                 Появились первые альтернативные криптовалюты, такие как Litecoin и Namecoin,
@@ -118,7 +118,7 @@
                     <div class="timeline-blank"></div>
                     <div class="timeline-text d-flex-2">
                         <div class="single-timeline__content">
-                            <img src="public/img/history/2014.jpg" width="200px">
+                            <img src="img/history/2014.jpg" width="200px">
                             <p>
                                 <span>2014 год</span> - Создание Ethereum:
                                 В 2014 году Виталик Бутерин представил Ethereum - платформу с собственной криптовалютой
@@ -134,7 +134,7 @@
                     <div class="timeline-blank"></div>
                     <div class="timeline-text d-flex-2">
                         <div class="single-timeline__content">
-                            <img src="public/img/history/2017.png" width="200px">
+                            <img src="img/history/2017.png" width="200px">
                             <p>
                                 <span>2017 год</span> - Взрыв интереса к ICO:
                                 В 2017 году начался бум ICO (Initial Coin Offering), что привело к множеству новых
@@ -149,7 +149,7 @@
                     <div class="timeline-blank"></div>
                     <div class="timeline-text d-flex-2">
                         <div class="single-timeline__content">
-                            <img src="public/img/history/2018.jpg" width="200px">
+                            <img src="img/history/2018.jpg" width="200px">
                             <p>
                                 <span>2017-2018 годы</span> - Рост и коррекция курса биткоина:
                                 Биткоин достиг исторических максимумов, привлекая внимание как инвесторов, так и
@@ -164,7 +164,7 @@
                     <div class="timeline-blank"></div>
                     <div class="timeline-text d-flex-2">
                         <div class="single-timeline__content">
-                            <img src="public/img/history/2020.jpg" width="200px">
+                            <img src="img/history/2020.jpg" width="200px">
                             <p>
                                 <span>2020-2021 годы</span> - Институциональное участие и NFT:
                                 В эти годы институциональные инвесторы проявили интерес к криптовалютам, а также начался
@@ -180,7 +180,7 @@
                     <div class="timeline-blank"></div>
                     <div class="timeline-text d-flex-2">
                         <div class="single-timeline__content">
-                            <img src="public/img/history/2021.png" width="200px">
+                            <img src="img/history/2021.png" width="200px">
                             <p>
                                 <span>2021 год</span> - Запуск Ethereum 2.0:
                                 Ethereum начал переход с консенсуса Proof of Work (PoW) на консенсус Proof of Stake
@@ -196,7 +196,7 @@
                     <div class="timeline-blank"></div>
                     <div class="timeline-text d-flex-2">
                         <div class="single-timeline__content">
-                            <img src="public/img/history/today.jpg" width="200px">
+                            <img src="img/history/today.jpg" width="200px">
                             <p>
                                 <span>В настоящее время</span> - Развитие в различных отраслях:
                                 Блокчейн-технология активно применяется в финансовой сфере, цепях поставок,
