--- a/news.html
+++ b/news.html
@@ -18,7 +18,7 @@
         <div class="header__body">
 
             <div class="header__logo">
-                <img src="public/img/icon.svg" alt="">
+                <img src="img/icon.svg" alt="">
             </div>
             <p class="header__title">BlockBlog</p>
 
@@ -42,7 +42,7 @@
 <main>
     <div class="main-container">
         <div class="article">
-            <img class="article-image" src="public/img/assets/im1.png">
+            <img class="article-image" src="img/assets/im1.png">
             <h1>Demystifying Blockchain: A Beginner's Guide</h1>
             <p>В этой статье мы рассмотрим основы технологии блокчейн и как она работает, предоставляя читателям
                 понятное введение в мир децентрализации и безопасности данных.</p>
@@ -97,23 +97,23 @@
         <aside>
             <h1>Последние новости</h1>
             <div class="article-card">
-                <img src="public/img/assets/im1.png" height="100px">
+                <img src="img/assets/im1.png" height="100px">
                 <h3>Demystifying Blockchain: A Beginner's Guide</h3>
             </div>
             <div class="article-card">
-                <img src="public/img/assets/im4.jpg" height="100px">
+                <img src="img/assets/im4.jpg" height="100px">
                 <h3>Blockchain in Supply Chain Management: Revolutionizing Logistics</h3>
             </div>
             <div class="article-card">
-                <img src="public/img/assets/im2.png" height="100px">
+                <img src="img/assets/im2.png" height="100px">
                 <h3>The Role of Blockchain in Financial Services: Beyond Bitcoin</h3>
             </div>
             <div class="article-card">
-                <img src="public/img/assets/im3.jpg" height="100px">
+                <img src="img/assets/im3.jpg" height="100px">
                 <h3>Blockchain and Healthcare: A Prescription for Data Security</h3>
             </div>
             <div class="article-card">
-                <img src="public/img/assets/im4.jpg" height="100px">
+                <img src="img/assets/im4.jpg" height="100px">
                 <h3>The Environmental Impact of Blockchain: Greening the Digital Ledger</h3>
             </div>
         </aside>
