--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="header__body">
 
             <div class="header__logo">
-                <img src="public/img/icon.svg" alt="">
+                <img src="img/icon.svg" alt="">
             </div>
             <p class="header__title">BlockBlog</p>
 
