--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
             <div class="ss-container__box">
                 <span></span>
                 <div class="ss-container__box__content">
-                    <h2>My posts</h2>
-                    <p>Discover 'My Posts,' your personalized corner for sharing updates and insights. This section
-                        allows
-                        you to connect with others, post your thoughts, and keep track of your contributions within the
-                        community.</p>
+                    <h2>History</h2>
+                    <p>The history section of the website delves into the origins and evolution of blockchain
+                        technologies, providing a comprehensive timeline of key milestones and breakthroughs in the
+                        field.
+                    </p>
                     <a href="#">Read More</a>
                 </div>
             </div>
