--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
         <div class="header__down__container">
             <h1 class="header__slogan">Unlocking Tomorrow's Potential: <br>Explore the World of Blockchain Technology!
             </h1>
-            <button class="header__start glow-on-hover">Start your tech travelling</button>
+            <button class="header__start glow-on-hover" onclick="document.location='explore.html'">Start your tech
+                travelling
+            </button>
         </div>
     </div>
 </header>
@@ -197,7 +199,8 @@
                 <div class="social-buttons">
                     <a href="https://t.me/@ardyc" class="social-button social-button--telegram" aria-label="Telegram"><i
                             class="fab fa-telegram"></i></a>
-                    <a href="https://github.com/ArhostCode" class="social-button social-button--github" aria-label="GitHub"><i
+                    <a href="https://github.com/ArhostCode" class="social-button social-button--github"
+                       aria-label="GitHub"><i
                             class="fab fa-github"></i></a>
                     <a href="https://m.vk.com/ardycode" class="social-button social-button--vk" aria-label="VK"><i
                             class="fab fa-vk"></i></a>
